objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Holders_Name__c</fullName>
        <label>Account Holders Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <inlineHelpText>Bank Account Number</inlineHelpText>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Address</label>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>Bank Acccounts</relationshipLabel>
        <relationshipName>Bank_Acccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <description>International Bank Account Number</description>
        <label>IBAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bank Acccounts</relationshipLabel>
        <relationshipName>Bank_Acccounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Account</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Acccounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>